# WebRelayX

./: .gitignore  LICENSE  README.md  pyproject.toml
THIRD-PARTY-LICENSES/: impacket
src/webrelayx/: __init__.py  main.py
src/webrelayx/util/: cookies.py  relay_client.py  scanner.py  shared.py
