[project]
name = "webrelayx"
version = "0.1.2"
description = "NTLM relay to various web services"
authors = [
    {name = "Patrick Pongratz",email = "patrick.pongratz@seccore.at"},
    {name = "Benjamin Floriani",email = "benjamin.floriani@seccore.at"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "impacket (>=0.13.0,<0.14.0)",
    "playwright (>=1.40.0)"
]

[tool.poetry]
packages = [{include = "webrelayx", from = "src"}]

[tool.poetry.scripts]
webrelayx = "webrelayx.main:main"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^8.0.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
